--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
             <button type="submit" value="submit">Submit</button>
         </form>
     </section>
+    <script src="index.js"></script>
 </body>
+
 </html>
